progress with html output

--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@ p {
 padding: 0 0 1em;
 }
 .msg_list {
-margin: 0px;
-padding: 0px;
-width: 383px;
+  width: 100%;
 }
 .msg_head {
 padding: 5px 10px;
 cursor: pointer;
 position: relative;
-background-color:#FFCCCC;
+background-color:#99FFFF;
 margin:1px;
 }
 .msg_body {
@@ -51,20 +49,27 @@ background-color:#F4F4F8;
 	<div class="msg_list">
 		<p class="msg_head">Header-1 </p>
 		<div class="msg_body">
-		orem ipsum dolor sit amet, consectetuer adipiscing elit orem ipsum dolor sit amet, consectetuer adipiscing elit
-		</div>
+		  orem ipsum dolor sit amet, consectetuer adipiscing elit orem ipsum dolor sit amet, consectetuer adipiscing elit
+    </div>
+
 		<p class="msg_head">Header-2</p>
 		<div class="msg_body">
-		orem ipsum dolor sit amet, consectetuer adipiscing elit orem ipsum dolor sit amet, consectetuer adipiscing elit
-		</div>
+		  orem ipsum dolor sit amet, consectetuer adipiscing elit orem ipsum dolor sit amet, consectetuer adipiscing elit
+    </div>
+
 		<p class="msg_head">Header-3</p>
 		<div class="msg_body">
-		orem ipsum dolor sit amet, consectetuer adipiscing elit orem ipsum dolor sit amet, consectetuer adipiscing elit
-		</div>
-		</div>
-		<br />
+      orem ipsum dolor sit amet, consectetuer adipiscing elit orem ipsum dolor sit amet, consectetuer adipiscing elit
+    	<p class="msg_head">Header-3</p>
+		  <div class="msg_body">
+		    Hello bollo
+		  </div>
 
+		</div>
 	</div>
+	<br />
+
+ </div>
 
 	<div class="footer">&copy; 2006 <a href="index.html">Website.com</a>. Valid <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> &amp; <a href="http://validator.w3.org/check?uri=referer">XHTML</a>. Template design by <a href="http://templates.arcsin.se">Arcsin</a>
 	</div>
